# MyoGestic

./: .buildinfo  .gitignore  .gitmodules  API_PARAMETERS.md  CHANGELOG.md  LICENSE  README.html  README.md  api_documentation.html  compiler.py  context7.json  genindex.html  index.html  objects.inv  properdocs.yml  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: docs.yml  publish.yml  sphinx.yml  tests.yml
_downloads/16ac5d0bf77771f25776e1eba491231a/: 4_add_output_system.ipynb
_downloads/21fc2c9fe62452eb518dbc402e9c647a/: 1_add_post_prediction_filter.ipynb
_downloads/2212e87bd3fb3aad8c40a09fcf8bc488/: 1_tutorial.ipynb
_downloads/441132b21e6a53615c066565dfd33ce3/: 0_add_ui.ipynb
_downloads/465f29729f05fe27e56b4184d24e065b/: 2_adding_new_model.py
_downloads/56b35ed42ca55ff3b4b2baf560665a9b/: 1_tutorial.py
_downloads/5804508bb745d164e9c4616227cb5748/: 1_add_post_prediction_filter.py
_downloads/753281817ec9af9ebd120593095f085c/: 2_add_model.py
_downloads/77001b82a6a1766607369c6cc5ae48cb/: 3_add_biosignal_feature.ipynb
_downloads/795cc4c3bde08df280d8a1ff470f595a/: 2_add_model.ipynb
_downloads/8c27171dcab8db7e7bf18e365e4bdffa/: 1_setup_interface.ipynb
_downloads/97c1ac171ca10d1fe7d1018d60025579/: 3_output_system.ipynb
_downloads/e22145ce0cf48c8c981d4e2b2d31ae60/: 1_setup_interface.py
_downloads/ea384e447d8f6626ceb2611247dcf2e3/: 0_add_ui.py
_downloads/f8643e76dd7dfd649e4b8af4624caa59/: 2_adding_new_model.ipynb
_downloads/fb1062aedd82bba761d9963f11aeb103/: 2_recording_interface.ipynb
_modules/: index.html
_sources/: README.md.txt  api_documentation.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: 1_tutorial.rst.txt  2_adding_new_model.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/modules/: config.rst.txt  models.rst.txt  protocols.rst.txt  visual_interface.rst.txt
auto_examples/: 1_tutorial.html  2_adding_new_model.html  index.html  sg_execution_times.html
auto_examples/01_add_functionality/: 1_add_post_prediction_filter.html  2_add_model.html  3_add_biosignal_feature.html  4_add_output_system.html  index.html  sg_execution_times.html
auto_examples/02_add_visual_interface/: 0_add_ui.html  1_setup_interface.html  2_recording_interface.html  3_output_system.html  index.html  sg_execution_times.html
docs/: Makefile  anatomy.md  getting-started.md  index.md  troubleshooting.md  widget-gallery.md
docs/api/: bridges.md  core.md  filters.md  index.md  ml.md  models.md  outputs.md  session.md  sources.md  widgets.md
docs/concepts/: architecture.md  design-principles.md  edge-trigger.md  grid-layout.md  index.md  pipeline.md  recording.md  streams.md  threading.md  widgets.md
docs/how-to/: add-a-model.md  add-a-source.md  add-a-widget.md  add-an-output.md  connect-otb-devices.md  enable-recording.md  feature-extraction-cookbook.md  headless-mode.md  index.md  install-vhi.md  integrate-vhi.md  inter-stage-state.md  post-process-output.md  record-and-replay.md  record-good-training-data.md  use-contrib-features.md  use-recipe-features.md
docs/images/: README.md
docs/playground/: app.py  index.html
docs/reference/: api-cheatsheet.md  glossary.md  index.md
docs/source/: api_documentation.rst  conf.py  index.rst
docs/stylesheets/: api.css  code-dark.css  code-light.css  home.css  layout.css  widget-gallery.css
docs/tutorials/: emg-classification.md  emg-regression-with-vhi.md  examples-index.md  index.md
examples/: 1_tutorial.py  2_adding_new_model.py  README.rst
examples/01_add_functionality/: 2_add_model.py  3_add_biosignal_feature.py  4_add_output_system.py  README.rst
examples/02_add_visual_interface/: 0_add_ui.py  1_setup_interface.py  2_recording_interface.py  3_output_system.py  README.rst
examples/otb/: muovi_emg.py  quattrocento_emg.py
examples/panels/: README.md  _fixtures.py  app_logo.py  feature_selector.py  filter_control.py  heatmap.py  image.py  line_plot.py  log_panel.py  pipeline_panel.py  post_processor.py  prediction_label.py  process_launcher.py  raw_signal_viewer.py  recording_controls.py  scatter2d.py  scatter3d.py  session_manager.py  signal_viewer.py  stream_panel.py  template_inspector.py  trial_preview.py  vhi_movements.py
examples/synthetic/: channel_grid_demo.py  emg_32ch_multi_model.py  emg_classification.py  emg_classification_grpc.py  emg_popout_layout.py  emg_regression.py  emg_regression_raulnet.py  high_channel_viewer.py
modules/: config.html  models.html  protocols.html  visual_interface.html
modules/features/: temporal.html
modules/gui/: default.html  online.html  record.html  training.html
modules/models/: config.html  definitions.html
myogestic/: __init__.py  _browser.py  _platform.py  _session_core.py  _session_io.py  _session_windows.py  _theme.py  _vhi_client.py  contracts.py  core.py  default_config.py  edge_trigger.py  filters.py  grid.py  interfaces.py  main.py  session.py  stream.py  theme.py  user_config.py
myogestic/_proto/: __init__.py  myogestic_vhi.proto  myogestic_vhi_pb2_grpc.py
overrides/: main.html
setup/: myogestic_setup.iss
tests/: conftest.py  model.cbm  model.pkl  test_channel_grid.py  test_channel_grid_serialization.py  test_core.py  test_dataset.py  test_dataset_bugfixes.py  test_docs.py  test_docstring_examples.py  test_edge_trigger.py  test_emg_generator.py  test_examples.py  test_filter_controls.py  test_filter_processor.py  test_filters.py  test_grid.py  test_interfaces.py  test_mains_notch.py  test_ml.py  test_model.py  test_model_information.py  test_model_training.py  test_models.py  test_otb_crc.py  test_otb_decode.py  test_otb_muovi_loopback.py  test_otb_quattrocento_config.py  test_otb_quattrocento_golden.py  test_otb_quattrocento_loopback.py  test_outputs.py  test_panel_header.py  test_popout.py  test_predictions.py  test_public_api.py  test_recipes.py  test_recording_race.py  test_recording_widget.py  test_recordings.py  test_replay_source.py  (+8 more)
tools/: gen_param_inventory.py  gen_proto.py  regen_icon.py  widget_screenshot.py
(+251 files in other folders)
