[project]
name = "MyoGestic"
version = "0.9.0"
description = "Software framework made to help the myocontrol community to develop and test new myocontrol algorithms."
authors = [
    { name = "Raul C. Sîmpetru", email = "raul.simpetru@fau.de" },
    { name = "Dominik I. Braun", email = "dome.braun@fau.de" },
    { name = "Vlad Cnejevici", email = "vlad.cnejevici@fau.de" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biosignal-device-interface",
    "catboost>=1.2.7",
    "myoverse>=1.1.3",
    "numcodecs!=0.16",
    "pyside6>=6.8.2.1",
    "qdarkstyle>=3.2.3",
    "scikit-learn>=1.6.1",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "vispy>=0.16.0",
]

[project.scripts]
myogestic = "myogestic.main:main"

[tool.setuptools.packages.find]
include = ["myogestic*"]

[tool.uv]
package = true
config-settings = { editable_mode = "compat" }
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]
# Override MyoVerse's torch constraints to use cu126-compatible versions
override-dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
]

[tool.uv.sources]
sphinxcontrib-pdfembed = { git = "https://github.com/SuperKogito/sphinxcontrib-pdfembed.git" }
myoverse = { git = "https://github.com/NsquaredLab/MyoVerse.git" }
torch = [
  { index = "torch-gpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "torch-gpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "torch-gpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
  { index = "torch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[dependency-groups]
dev = [
    "docutils-stubs>=0.0.22",
    "matplotlib>=3.10.0",
    "prospector>=1.14.1",
    "pytest>=9.0.2",
]

docs = [
    "enum-tools[sphinx]>=0.12.0",
    "linkify-it-py>=2.0.3",
    "memory-profiler>=0.61.0",
    "pydata-sphinx-theme>=0.16.1",
    "rinohtype>=0.5.5",
    "sphinx>=8.1.3",
    "sphinx-gallery>=0.19.0",
    "sphinxcontrib-pdfembed",
    "sphinxcontrib-youtube>=1.4.1",
]

compile = [
    "distributed>=2025.2.0",
    "pyinstaller>=6.12.0",
]
